# mr_socketio

./: Cargo.toml  README.md
examples/: example1.rs
src/: client.rs  error.rs
