[package]
name = "mr_socketio"
version = "0.1.3"
edition = "2021"
authors = ["Supaat Wisessued <supaat.wi@gmail.com>"] # Optional
license = "MIT OR Apache-2.0" # Use a valid SPDX license identifier
repository = "https://github.com/supaatwi/mr_socketio" # Optional but recommended
documentation = "https://github.com/supaatwi/mr_socketio/blob/main/README.md" # Optional but recommended
description = "A brief description of what your crate does"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
rust_socketio = {version = "0.6.0", features = ["async"]}
thiserror = "2.0.11"
futures-util = "0.3"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
rand = "0.8"