[package]
name = "mr_socketio"
version = "0.1.0"
edition = "2021"
authors = ["Supaat Wisessued <supaat.wi@gmail.com>"]
license = "MIT OR Apache-2.0" 
repository = "https://github.com/supaatwi/mr_socketio"
documentation = "https://github.com/supaatwi/mr_socketio/blob/main/README.md"
description = "A brief description of what your crate does"
keywords = ["socketio", "network", "protocol", "client"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
rust_socketio = {version = "0.6.0", features = ["async"]}
thiserror = "2.0.11"
futures-util = "0.3"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
rand = "0.8"